--- a/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
+++ b/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
@@ -84,8 +84,8 @@
 %%%%%%%%% AUTHORS
 % WILL NEED TO REARRANGE THE AUTHORS LIST & GET CORRECT INSTITUTIONS / EMAILS
 \author{%
-T.S. Jayram\thanks{\textit{Almaden Research Center, San Jose, CA, USA}.} \hspace{1.5cm} \and  
-Vincent Marois\thanks{\textit{Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \hspace{1.5cm} \and 
+T.S. Jayram\thanks{\textit{IBM Almaden Research Center, San Jose, CA, USA}.} \hspace{1.5cm} \and  
+Vincent Marois\thanks{\textit{IBM Thomas J. Watson Research Center, Yorktown Heights, NY, USA}.} \hspace{1.5cm} \and 
 Tomasz Kornuta\thanks{Currently at NVIDIA. \textit{Santa Clara, CA, USA}.}  \and
 \hspace{1cm} Vincent Albouy\footnotemark[1]  \hspace{1.5cm} \and 
 Emre Sevgen\thanks{Currently at Citrine Informatics.}  \hspace{1.5cm} \and 
