Submitted files to arxiv in a single folder

--- a/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
+++ b/Transfer_Learning/arxiv_version/arxiv_paper_main.tex
@@ -21,6 +21,7 @@
 	urlcolor={blue!80!black},
 }
 
+\usepackage[hyperpageref]{backref}
 \usepackage{cleveref}
 \crefname{section}{Section}{Sections}
 \crefname{figure}{Figure}{Figures}
