--- a/Transfer_Learning/arxiv_version/submission_folder/ms.tex
+++ b/Transfer_Learning/arxiv_version/submission_folder/ms.tex
@@ -1,5 +1,5 @@
 \documentclass[11pt]{article}
-
+\pdfoutput=1
 \usepackage[letterpaper,margin=1in]{geometry}
 \usepackage{times}
 \usepackage{graphicx}
@@ -21,6 +21,7 @@
 	urlcolor={blue!80!black},
 }
 
+\usepackage[hyperpageref]{backref}
 \usepackage{cleveref}
 \crefname{section}{Section}{Sections}
 \crefname{figure}{Figure}{Figures}
@@ -116,7 +117,7 @@ Ahmet S. Ozcan\footnotemark[1] \and \\
 \input{summary}
 
 \bibliographystyle{alpha}
-\bibliography{../bibliography}
+\bibliography{bibliography}
 
 \newpage
 \appendix
