--- a/Transfer_Learning/arxiv_version/submission_folder/experiments.tex
+++ b/Transfer_Learning/arxiv_version/submission_folder/experiments.tex
@@ -42,12 +42,12 @@ Appendix~\ref{sec:cog-all-results}.
 	\centering
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{../results/samnet_cog_orig_canonical_no_labels.png}
+		\includegraphics[width=\textwidth]{figures/samnet_cog_orig_canonical_no_labels.png}
 	\end{subfigure}%
 	\newline
 	\begin{subfigure}{\textwidth}
 		\centering
-		\includegraphics[width=\textwidth]{../results/samnet_cog_orig_hard.png}
+		\includegraphics[width=\textwidth]{figures/samnet_cog_orig_hard.png}
 	\end{subfigure}%
 	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the 
 		baseline model~\cite{yang2018dataset} (gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
@@ -91,7 +91,7 @@ Noticeable results are shown in~\cref{fig:CoGenT-results}, while the complete se
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../results/CoGenT_results.pdf}
+	\includegraphics[width=0.8\textwidth]{figures/CoGenT_results.pdf}
 	\caption{CLEVR-CoGenT accuracies for all tasks $t$ when training on $t$ only, training on all tasks jointly and training on all tasks but $t$.} %For all experiments, the validation and test sets are identical.
 	\label{fig:CoGenT-results}
 \end{figure}
@@ -116,9 +116,9 @@ Fine-tuning did not demonstrate a clear benefit (except for \textit{Count}, wher
 Since the number of task classes (=23) in the COG dataset is large, we designed a 2-level hierarchy of task groups using the
 description of these tasks, as shown in~\cref{fig:task-groups}.
 
-\begin{figure}[!h]
+\begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.6\textwidth]{../img/architecture/hierarchy}
+	\includegraphics[width=0.6\textwidth]{figures/hierarchy}
 	\caption{Hierarchy of Task Groups.}
 	\label{fig:task-groups}
 \end{figure}
@@ -150,7 +150,7 @@ of the hierarchy:
 The results of these experiments are shown in~\cref{fig:COG-reasoning-results}.
  \begin{figure}[!b]
 	\centering
-	\includegraphics[width=0.85\textwidth]{../results/COG_reasoning_transfer_v3}
+	\includegraphics[width=0.85\textwidth]{figures/COG_reasoning_transfer_v3}
 	\caption{COG accuracies for all task groups $t$ when training on $t$ only; training on Group A or B; and on all tasks.}
 	\label{fig:COG-reasoning-results}
 \end{figure}
@@ -192,7 +192,7 @@ performance on longer video frames with more complex scenes.
 
 \begin{figure}[!b]
 	\centering
-	\includegraphics[width=0.8\textwidth]{../results/samnet_cog_overall_transfer.png}
+	\includegraphics[width=0.8\textwidth]{figures/samnet_cog_overall_transfer.png}
 	\caption{Total accuracies of SAMNet (blue) and baseline models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
@@ -235,7 +235,7 @@ Both are consistent with findings from the literature~\cite{johnson2017inferring
 
 \begin{figure}[!t]
 	\centering
-	\includegraphics[width=0.6\textwidth]{../results/CoGenT_B_results.pdf}
+	\includegraphics[width=0.6\textwidth]{figures/CoGenT_B_results.pdf}
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and fine-tuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
