motivation - in related work
Signed-off-by: ibm <tkornuta.ibm@gmail.com>

--- a/Transfer_Learning/cvpr_2nd_submission/related_work.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/related_work.tex
@@ -16,5 +16,11 @@ One of the most systematic works in this area is the computational taxonomic map
 
 \tk{missing review: TL in visual reasoning, refer to CoGenT and COG}
 
+\tk{The experimental results clearly indicate that transfer learning is helping, despite that the core assumptions on the compatibility/similarity of domains is broken (transfering between domains having similar distribution).
+We do not understand this fully, thus the need for a more systematic research on that topic emerges.
+The paper adresses that by introducing a theoretical framework/taxonomy enabling to categorise visual reasoning tasks. 
+As a starting point, we picked two visual reasoning datasets and analyse the achieved results through the prism of the proposed taxonomy.
+}
+
 
 \tk{after reading that section the reader should end up with a conclusion that: there are no good models for TL in VR and, moreover, the datasets are randomly testing this or that, there is no theoretical framework showing that do they mean/bigger picture is missing}
