--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -38,7 +38,7 @@
 		\centering
 		\includegraphics[width=0.9\textwidth]{../results/samnet_cog_orig_hard.png}
 	\end{subfigure}%
-	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the 
+	\caption{Comparison of test set accuracies of SAMNet (blue) with original results achieved by the
 		baseline model~\cite{yang2018dataset} (gray) on Canonical (top) and Hard (bottom) variants of the COG dataset.}
 	\label{fig:samnet_cog_detailed}
 \end{figure*}
@@ -74,7 +74,7 @@ Below, substitute each of \textit{Shape} and \textit{Color} for  \uX{} to obtain
 
 baseline model~\cite{yang2018dataset}
 
-We trained SAMNet using 8 reasoning steps (k=8) and external memory of 8 address locations, each storing an array of 128 floats. 
+We trained SAMNet using 8 reasoning steps (k=8) and external memory of 8 address locations, each storing an array of 128 floats.
 %We have also carried out experiments with different numbers of reasoning steps and memory size, but this goes beyond the scope of this paper.
 We compared our results with the baseline model introduced in the same paper as the COG dataset~\cite{yang2018dataset}.
 The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; full comparison can be found in the supplementary material.%Appendix~\ref{sec:cog-all-results}.
@@ -91,7 +91,7 @@ The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; fu
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=0.8\columnwidth]{../results/CoGenT_B_results.pdf}
+	\includegraphics[width=\columnwidth]{../results/CoGenT_B_results_with_baselines.pdf}
 	\caption{Test accuracy on CoGenT-A \& -B when training on CoGenT-A (blue) and fine-tuning on CoGenT-B (gray).}
 	\label{fig:CoGenT-B-results}
 \end{figure}
@@ -105,27 +105,27 @@ The most important results are highlighted in~\cref{fig:samnet_cog_detailed}; fu
 
 The goal here is to test the transfer learning ability concerning the frame sequence length, frame history required
 for reasoning, and the number of object distractors.
-For that purpose, we compare both models when trained on the Canonical variant but tested on the 
+For that purpose, we compare both models when trained on the Canonical variant but tested on the
 Hard variant (\cref{fig:samnet_cog_overall_transfer}).
-The light gray color indicates original accuracies of the baseline model from paper, 
+The light gray color indicates original accuracies of the baseline model from paper,
 whereas dark gray indicates accuracies of the baseline model
 obtained by running the original code provided by the authors~\cite{yang2018implement}.
 
-The first column displays the scores of the traditional ML setup when training and testing on the Canonical variant. 
+The first column displays the scores of the traditional ML setup when training and testing on the Canonical variant.
 The observed close scores in light and dark gray underscore the baseline model reproducibility.
-For both cases of zero-shot learning (second column--91.6\% vs 65.9\%) and fine-tuning using a single epoch 
+For both cases of zero-shot learning (second column--91.6\% vs 65.9\%) and fine-tuning using a single epoch
 (third column--96.7\% vs. 78.1\%), SAMNET outperforms the baseline model significantly.
-Interestingly, this fine-tuning yields a mild boost of +0.6\% on the earlier reported accuracy 
+Interestingly, this fine-tuning yields a mild boost of +0.6\% on the earlier reported accuracy
 in~\cref{sec:cog-baseline-compare} (fourth column).
-These results suggest that it suffices to train SAMNet on simpler videos 
-to enable learning of good memory usage and attention on relevant entities  
-in order to achieve comparable, if not better, 
+These results suggest that it suffices to train SAMNet on simpler videos
+to enable learning of good memory usage and attention on relevant entities
+in order to achieve comparable, if not better,
 performance on longer video frames with more complex scenes.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\columnwidth]{../results/samnet_cog_overall_transfer.png}
-	\caption{Total accuracies of SAMNet (blue) and baseline models (light/dark gray) when testing generalization from Canonical to Hard variants of the dataset.}
+	\includegraphics[width=\columnwidth]{../results/samnet_cog_overall_transfer_new.pdf}
+	\caption{Total accuracies of SAMNet (blue) and baseline models (gray / yellow) when testing generalization from Canonical to Hard variants of the dataset.}
 	\label{fig:samnet_cog_overall_transfer}
 \end{figure}
 
@@ -135,7 +135,7 @@ performance on longer video frames with more complex scenes.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\columnwidth]{../results/CoGenT_results.pdf}
+	\includegraphics[width=\columnwidth]{../results/CoGenT_results_new.pdf}
 	\caption{CLEVR-CoGenT accuracies for all tasks $t$ when training on $t$ only, training on all tasks jointly and training on all tasks but $t$.} %For all experiments, the validation and test sets are identical.
 	\label{fig:CoGenT-results}
 \end{figure}
@@ -152,6 +152,3 @@ performance on longer video frames with more complex scenes.
 	\caption{COG accuracies for all task groups $t$ when training on $t$ only; training on Group A or B; and on all tasks.}
 	\label{fig:COG-reasoning-results}
 \end{figure}
-
-
-
