Finish standardizing experiments figures visual appearance.

--- a/Transfer_Learning/cvpr_2nd_submission/experiments.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/experiments.tex
@@ -148,7 +148,7 @@ performance on longer video frames with more complex scenes.
 
 \begin{figure}[htbp]
 	\centering
-	\includegraphics[width=\columnwidth]{../results/COG_reasoning_transfer_v3}
+	\includegraphics[width=\columnwidth]{../results/COG_reasoning_transfer_new.pdf}
 	\caption{COG accuracies for all task groups $t$ when training on $t$ only; training on Group A or B; and on all tasks.}
 	\label{fig:COG-reasoning-results}
 \end{figure}
