Small corrections and improvements in Intro / SAMNet & Transfer Learning.

--- a/Transfer_Learning/cvpr_2nd_submission/samnet.tex
+++ b/Transfer_Learning/cvpr_2nd_submission/samnet.tex
@@ -11,10 +11,10 @@
 %\end{minipage}\hfill
 %\caption{General architecture of SAMNet (left) and a single reasoning step in SAMCell (right)}
 %\label{fig:samnet}
-%\end{figure}	
+%\end{figure}
 
-%Selective Attention Memory Network (SAMNet) is a end-to-end differentiable model made for video reasoning. It is a model based on attention mechanisms but also on a Selective Attention Memory which is able to store selected entities. This memory enables SAMNet to reason across multiple frames and perform spatio-temporal reasoning. 
-%The core of SAMNet is based a recurrent cell called SAMCell. By aligning together a series of k SAMCells per frame, the network can perform k reasoning steps over a frame. At every new frame, a new series of k SAMCells is initiated. The SAMCell can read and write to memory at every frame using a content addressable mechanism. This section describes the model and the different units that composed a SAMCell. They are called the Question-driven Controller, the Visual Retrieval Unit, the Memory Retrieval Unit, the Reasoning unit, the Memory update unit, and the Summary Object Udpate Unit. 
+%Selective Attention Memory Network (SAMNet) is a end-to-end differentiable model made for video reasoning. It is a model based on attention mechanisms but also on a Selective Attention Memory which is able to store selected entities. This memory enables SAMNet to reason across multiple frames and perform spatio-temporal reasoning.
+%The core of SAMNet is based a recurrent cell called SAMCell. By aligning together a series of k SAMCells per frame, the network can perform k reasoning steps over a frame. At every new frame, a new series of k SAMCells is initiated. The SAMCell can read and write to memory at every frame using a content addressable mechanism. This section describes the model and the different units that composed a SAMCell. They are called the Question-driven Controller, the Visual Retrieval Unit, the Memory Retrieval Unit, the Reasoning unit, the Memory update unit, and the Summary Object Udpate Unit.
 %The model is also composed of an Image Encoder and a Question Encoder both responsible to pre-process the visual and textual inputs. The output unit is a classifier.
 %All those modules are described below.
 \ao{Method: Start high level, how different modules interface each other, and what the motivation is for each such a module. Then it should define standard parts such as attention over questions, and introduce all the variables that appear from nowhere. I would also like to see a more clear Figure 2 depicting the architecture. There is very little correspondence between that figure and the equations used in the paper.}
@@ -23,7 +23,7 @@ SAM Network (SAMNet for short) is an end-to-end differentiable recurrent model e
 iterative reasoning as proposed e.g. in MAC (Memory-Attention-Composition) Network~\cite{hudson2018compositional,marois2018transfer} and use of an external memory, as in Memory-Augmented Neural Networks such as NTM (Neural Turing Machine)~\cite{graves2014neural}, DNC (Differentiable Neural Computer)~\cite{graves2016hybrid} or DWM (Differentiable Working Memory)~\cite{jayram2018learning}.
 
 A distinctive feature of the SAM Network is its frame-by-frame temporal processing approach, where a single frame can be accessed at once. This is a notable difference from~\cite{haurilet2019s}, which uses graph traversal reasoning. The recurrent nature of SAMNet does not prevent frame sequences longer than those used for training.
-The memory locations store relevant objects representing contextual information about words in text and visual objects extracted from video. 
+The memory locations store relevant objects representing contextual information about words in text and visual objects extracted from video.
 Each location of the memory stores a $d$-dimensional vector. %, where $d$ is a global parameter.
 The memory can be accessed through either content-based addressing, via dot-product attention, or location-based addressing. Using gating mechanisms, correct objects can be retrieved in order to perform multi-step spatio-temporal reasoning over text and video.
 A notable feature of this design is that the number of addresses $N$ can be changed between training and testing, to fit the data characteristics.
@@ -35,14 +35,15 @@ A notable feature of this design is that the number of addresses $N$ can be chan
 %	\label{fig:samcell}
 %\end{figure}
 
-The input to SAMNet consists of a question component and a visual component that is either a single frame in case of a static image or a sequence of frames in case of a video
-The question is represented as a sequence of word embeddings (either one-hot or preprocessed by GloVe~\cite{}) corresponding to words in the question.
-Each frame of the visual input is encoded using raw pixels or preprocessed by a pre-trained deep network such as RESNet~\cite{}. 
+\noindent{\textbf{Input Units.}}
+The input to SAMNet consists of a question component and a visual component that is either a single frame in case of a static image or a sequence of frames in case of a video.
+The question is represented as a sequence of word embeddings (either one-hot or preprocessed by GloVe~\cite{pennington2014glove}) corresponding to words in the question.
+Each frame of the visual input is encoded using raw pixels or preprocessed by a pre-trained deep network such as RESNet~\cite{he2016deep}.
 The language input of $L$ word embeddings is processed by a Bi-LSTM based question encoder that produces \emph{contextual words} $\vec{cw} \in \Reals^{L \times d}$.
-The final states in either direction of the BI-LSTM are also concatenated and passed through a linear layer to produce a global representation of the question in $\Reals^d$, called the \emph{question embedding}. 
-The $j$-th frame of the visual input, where $j$ indexes over the frames in temporal order, is processed by an image encoder---a CNN with appropriately chosen number of layers---to produce a \emph{feature map} $F_j \in \Reals^{H \times W \times d}$. 
+The final states in either direction of the BI-LSTM are also concatenated and passed through a linear layer to produce a global representation of the question in $\Reals^d$, called the \emph{question embedding}.
+The $j$-th frame of the visual input, where $j$ indexes over the frames in temporal order, is processed by an image encoder---a CNN with appropriately chosen number of layers---to produce a \emph{feature map} $F_j \in \Reals^{H \times W \times d}$.
 
-The contextual words, question embedding and frame-by-frame feature map form the inputs to SAMNet's core, namely, a recurrent cell called the SAM Cell. Unrolling a new series of $T$ cells for each frame allows $T$ steps of iterative reasoning, similar to~\cite{hudson2018compositional}. Information flows between frames through the external memory. 
+The contextual words, question embedding and frame-by-frame feature map form the inputs to SAMNet's core, namely, a recurrent cell called the SAM Cell. Unrolling a new series of $T$ cells for each frame allows $T$ steps of iterative reasoning, similar to~\cite{hudson2018compositional}. Information flows between frames through the external memory.
 During the $t$-th reasoning step, for $t=1,2, \dots, T$, SAM Cell maintains the following information as part of its recurrent state:
 (a) $\vec{c}_t \in \Reals^d$, the control state used to drive reasoning over objects in the frame and memory; and
 (b) $\vec{so}_t  \in \Reals^d$, the summary visual object representing the relevant object for step $t$.
@@ -59,14 +60,14 @@ in a trained model, $\whead_t$ points to the location of the first empty slot in
 
 \noindent{\textbf{Question-driven Controller.}}
 This module drives attention over the question to produce $k$ control states, one per reasoning operation.
-The control state $\vec{c}_t$ at step $t$ is then fed to a \emph{temporal classifier}, 
+The control state $\vec{c}_t$ at step $t$ is then fed to a \emph{temporal classifier},
 a two-layer feedforward network with ELU activation in the hidden layer of $d$ units.
-The output $\bm{\tau}_t$ of the classifier is intended to represent the different temporal contexts (or lack thereof) associated with the word in focus for that reasoning step.	
+The output $\bm{\tau}_t$ of the classifier is intended to represent the different temporal contexts (or lack thereof) associated with the word in focus for that reasoning step.
 For the COG dataset, we pick 4 classes to capture the terms labeled ``last'', ``latest'', ``now'', and ``none''.
 
 The visual retrieval unit uses the information generated above to extract a relevant object $\vec{vo}_t$ from the frame.
 A similar operation on memory yields the object $\vec{mo}_t$. The memory operation is based on attention mechanism, and resembles content-based addressing. Therefore, we obtain an attention vector over memory addresses that we interpret to be the \emph{read head}, denoted by $\rhead_t$.
-%Note that the returned objects may be invalid, e.g., if the current reasoning step focuses on the phrase ``last red square'', $\vec{vo}_t$ is invalid even if the current frame contains a red square. 
+%Note that the returned objects may be invalid, e.g., if the current reasoning step focuses on the phrase ``last red square'', $\vec{vo}_t$ is invalid even if the current frame contains a red square.
 
 \noindent{\textbf{Reasoning Unit.}}
 %\paragraph{Reasoning Unit.}
@@ -79,7 +80,7 @@ vector, the higher the aggregate value.
 We perform a similar computation on the read head $\rhead_t$ over memory locations.
 We input these two values, along with the temporal class weights $\bm{\tau}_t$, into a 3-layer feedforward classifier with hidden ELU units to extract 4 gating values (in $[0,1]$) for the current reasoning step:
 (a) $\imatch_t$, which determines whether there is a valid visual object;
-(b) $\mmatch_t$, which determines whether there is a valid memory object. 
+(b) $\mmatch_t$, which determines whether there is a valid memory object.
 (c) $\doreplace_t$, which determines whether the memory should be updated by replacing a previously stored object with a new one; and
 (d) $\doadd_t$, which determines whether a new object should be added to memory.
 We stress that the network has to learn via training how to correctly implement these behaviors.
@@ -91,8 +92,8 @@ Above, $\vec{w}_t$ denotes the pseudo-attention vector that represents the ``loc
 $\vec{w}_t$ sums up to at most 1 and can be zero, indicating in this case there is no need adding a new object nor replacing an existing object.
 We then update the memory accordingly as:
 \[ \vec{M}_t = \vec{M}_{t-1} \odot (\vec{J} - \vec{w}_t  \otimes \mathbf{1}) + \vec{w}_t  \otimes \vec{vo}_t,\]
-where $\vec{vo}_t$ denotes the object returned by the visual retrieval unit. 
-Here $\vec{J}$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product. 
+where $\vec{vo}_t$ denotes the object returned by the visual retrieval unit.
+Here $\vec{J}$ denotes the all ones matrix, $\odot$ denotes the Hadamard product and $\otimes$ denotes the Kronecker product.
 Note that the memory is unchanged in the case where $\vec{w}_t = 0$, i.e., $\vec{M}_t = \vec{M}_{t-1}$.
 We finally update the write head so that it points to the succeeding address if an object was added to memory or otherwise stay the same.
 Let $\whead'_{t-1}$ denote the circular shift to the right of $\whead_{t-1}$ which corresponds to the soft version of the head update.
